added header and links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <a href="index.html">
+            <h1>Love Runnning</h1>
+        </a>
+    </header>
+    <section> main image</section>
+    <section>club ethos</section>
+    <section>running location, distance, time</section>
+    <footer>social media links</footer>
 </body>
 </html>
