--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,25 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <h1>Love Runnning</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html"> Home</a>
+                    </li>
+                    <li>
+                        <a href="#"> Gallery</a>
+                    </li>
+                    <li>
+                        <a href="#"> sign up</a>
+                    </li>
+
+                </ul>
+            </nav>
         </a>
     </header>
     <section> main image</section>
@@ -20,4 +36,5 @@
     <section>running location, distance, time</section>
     <footer>social media links</footer>
 </body>
+
 </html>
