add styling for logo and heading

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Love Runnning</h1>
+            <h1 id="logo">Love Runnning</h1>
             <nav>
-                <ul>
+                <ul id="menu">
                     <li>
                         <a href="index.html"> Home</a>
                     </li>
