--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </nav>
         </a>
     </header>
-    <section> main image</section>
+    <section> 
+        <div id="hero-image"></div>
+    </section>
     <section>club ethos</section>
     <section>running location, distance, time</section>
     <footer>social media links</footer>
