--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </nav>
         </a>
     </header>
-    <section> 
+    <section id="hero-outer"> 
         <div id="hero-image"></div>
     </section>
     <section>club ethos</section>
