--- a/index.html
+++ b/index.html
@@ -119,7 +119,22 @@
             <h3>11:30</h3>
         </div>
     </section>
-    <footer>social media links</footer>
+    <footer>
+        <ul>
+            <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook site (opens in new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li> <a href="https://twitter.com/?lang=en" target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter site (opens in new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li> <a href="https://www.youtube.com/" target="_blank" rel="noopener" 
+                aria-label="Visit our Youtube site (opens in new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener" 
+                aria-label="Visit our Instagram site (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
     <!--font awesome script-->
     <script src="https://kit.fontawesome.com/445881c59d.js" crossorigin="anonymous"></script>
 </body>
